# long-web-novel-generator

./: .env.example  .gitignore  README.md  archive_agent_design.md  context_budget_design.md  design.md  exampleNovel.md  implementation_snapshot.md  outline_continuity_design.md  pyproject.toml  pyrightconfig.json  review_safety_notes.md  roadmap.md  structured_output_notes.md  项目小说总结构与章节蓝图总结.md
backend/: requirements.txt
backend/runtime/: chapter_state.json  review_audit.jsonl
backend/tests/integration/: test_stage2_workflow.py  test_stage3_audit_trail.py  test_stage4_fastapi.py  (+1 more)
docs/: design.md  frontend_workbench_guide.md  roadmap.md  stage4_logic_checklist.md  state_contract.md
src/: __init__.py  app.py  blackboard.py  blackboard_test.py  config.py  draft_writer.py
src/agents/: __init__.py  chapter_blueprint_validator.py  detail_outline_agent.py  outline_agent.py  outline_continuity.py  writer_agent.py
src/context/: __init__.py  assembler.py  budget.py
src/llm/: __init__.py  compatible_client.py
src/memory/: __init__.py  bm25_store.py  chunker.py  embedding.py  faiss_store.py  hybrid_retriever.py  ingest.py
src/orchestrator/: __init__.py  engine.py  state.py  workflow.py
src/schemas/: __init__.py  agent_outputs.py  chapter.py  context.py  memory.py  outline.py  project.py  review.py  scene.py  tool_io.py
src/storage/: __init__.py  markdown_store.py  memory_store.py  state_store.py
src/tools/: __init__.py  human_tool.py  rag_tool.py
tests/: test_context_budget.py  test_outline_agent.py  test_review_workflow.py  test_writer_agent.py
(+34 files in other folders)
